--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-12	Nick Schermer <nick@xfce.org>
+	* mousepad/mousepad-window.c: Jump to active file when
+	  opening a new document.
+
+
 2007-05-10	Nick Schermer <nick@xfce.org>
 	* mousepad/mousepad-undo.c: Don't store a string (or even
 	  prepend it in a GString) when the user is inserting text.
