--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_BR.po: Updated the Brazilian Portuguese translation
+	by Pablo Lerina <pabloalr@gmail.com>
+
 2007-04-07  Stephan Arts <stephan@xfce.org>
 
 	* nl.po: Merged Dutch translations from xfce_4_4 branch
@@ -6,7 +11,7 @@
 
 	* ca.po: Update Catalan translations
 
-2007-03-27  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-27  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB.po: Added the British translation
 	by Jeff Bailes <thepizzaking@gmail.com>
@@ -28,12 +33,12 @@
 
 	* eu.po: Basque translation update
 
-2007-02-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ko.po: Updated the Korean translation
 	by ByungHyun Choi <byunghyun.choi@debianusers.org>
 
-2007-02-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* Modified LINGUAS files to include Albanian language,
 	verified all the LINGUAS files.
@@ -51,12 +56,12 @@
 
 	* ca.po: Update Catalan translation
 
-2007-01-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Added the Albanian translation by
 	Besnik Bleta <besnik@programeshqip.org>
 
-2007-01-21  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 	* pl.po: Updated the Polish translation by
@@ -84,11 +89,11 @@
 
 	* sv.po: Updated Swedish translation.
 
-2007-01-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-14  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed accelerators in the French translation
 
-2007-01-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
 	Piotr Maliński <admin@rk.edu.pl>
@@ -102,12 +107,12 @@
 	* pa.po: Punjabi Translation file added
 	* LINGUAS: pa is added for Punjabi locale
 
-2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* mk.po: Added the Macedonian translation by
 	Tome Boshevski <tome@lugola.net>
 
-2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
 	Andrey Fedoseev <andrey.fedoseev@gmail.com>
@@ -116,7 +121,7 @@
 
 	* ca.po: Catalan Update by Carles Muñoz Gorriz <carlesmu@ya.com>
 
-2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-14  Maximilian Schleiss <maximilian@xfce.org>
 
 	* cy.po: Modified description text
 	* fr.po: Modified description text
@@ -129,7 +134,7 @@
 
 	* el.po: Greek translation update
 
-2006-11-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* cs.po: Updated the Czech translation
 	by Michal Várady <miko.vaji@gmail.com>.
@@ -140,7 +145,7 @@
 
 	* fi.po: Updated Finnish translation.
 
-2006-11-08  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-08  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation.
 
@@ -167,7 +172,7 @@
 	* pl.po: Updated Polish translation by Szymon Kałasz
 	<szymon_maestro@gazeta.pl>
 
-2006-10-17  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-10-17  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ko.po: Updated Korean translation by ByungHyun Choi
 	<byunghyun.choi@gmail.com>
@@ -228,7 +233,7 @@
 2006-07-15  Jean-François Wauthy
 
 	* fr.po: Updated French translations by Maximilian Schleiss
-	 <maxschleiss@bluewin.ch>
+	 <maximilian@xfce.org>
 
 2006-06-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
@@ -237,7 +242,7 @@
 2006-05-14  Daichi Kawahata <daichi@xfce.org>
 
 	* fr.po: Updated French translations by Maximilian Schleiss
-	  <maxschleiss@bluewin.ch>.
+	  <maximilian@xfce.org>.
 
 2006-05-13  Daichi Kawahata <daichi@xfce.org>
 
