--- a/po/fr.po
+++ b/po/fr.po
@@ -1,16 +1,16 @@
 # French translation of the mousepad package.
-# Copyright (C) 2005-2006 Erik Harrison.
+# Copyright (C) 2005-2007 Erik Harrison.
 # This file is distributed under the same license as the mousepad package.
 # Luc Pionchon <luc@handhelds.org>, 2004.
-# Maximilian Schleiss <maxschleiss@solnet.ch>, 2006-2007.
+# Maximilian Schleiss <maximilian@xfce.org>, 2006-2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.12\n"
+"Project-Id-Version: mousepad 0.2.13\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
 "PO-Revision-Date: 2007-01-21 02:07+0100\n"
-"Last-Translator: Maximilian Schleiss <maxschleiss@solnet.ch>\n"
+"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
