* nb_NO: Updated some Norwegian translations and added one for Xfmedia * pt_PT: Added European Portuguese translations * Changed my email address
(Old svn revision: 25797)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-11  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_PT.po: Added the European Portuguese translation
+	  by Nuno Miguel <nunis@netcabo.pt>
+
 2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Updated the Brazilian Portuguese translation
