Added a long waiting Amharic translation for trunk.
(Old svn revision: 26052)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-06  Maximilian Schleiss <maximilian@xfce.org>
+
+	* am.po: Added a long waiting Amharic translation
+	by Tegegne Tefera <tefera@mekuria.com>
+
 2007-06-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_PT.po: Added the European Portuguese translation
