--- a/TODO
+++ b/TODO
@@ -8,60 +8,44 @@ from the Xfce schedule).
 
 Interface
 =========
-- Dialog when closing multiple (modified) tabs. Maybe not needed
-  since we ask the use what to do when a modified file is closed.
 - Tab font color when the file is modified or read only.
 - Test the application with a screen reader and add Atk objects
   where needed.
 - Cleanup the menus and make them consistent. For example: we're
   using both file and document atm. The name of the Go menu should
   also be changed to something more descriptive.
-- You can't use the Ctrl - v/c/x buttons in the type-ahead bar
-  because they are 'registered' by the textview/ui.
-- When hitting the enter button in the jump dialog, we should jump.
-- Replace dialog. This dialog should also provide a find button so
-  there is an alternative for the type-ahead feature.
-- Maybe a match whole word option.
+- Make the mnemonic's consistent all over the application and make
+  sure they don't conflict inside a dialog/window.
+- Check the search and replace code for bugs.
+- Add option to disable the search feedback in the replace dialog
+  (highlight, count matches, type-ahead). This can slow down mousepad
+  with large text files.
+
+
+Undo
+====
+- Need to fix a couple of issues here. I'm not really satisfied with
+  it right now.
 
 
 Code
 ====
-- Cleanup mousepad-document.h. The order of the functions is a mess.
 - Check for code duplication and make sure the comments are worth
   reading.
-
-
-Text View
-=========
-- Tabs as spaces option.
-
-
-Undo Manager
-============
-- Replace g_list_append with g_list_prepend in the undo manager. See
-  glib manual why.
-- We erase the GString in the undo manager, but this buffer will be
-  (very) large when a large bunch of text is deleted. Maybe not a big
-  problem, but we could shrink it after erasing.
-- Let the undo manager handle multiple steps (mostly for vertical
-  selection cut/delete).
 
 
 Saving and loading
 ==================
 - Save All option.
-- Support for encoding. Only UTF-8 is supported for testing.
-- The filenames used in the title and tooltips are not UTF-8 safe.
-  We also have to make sure _ characters in a filename do not
-  result in mnemonic labels.
 - Check if the file is externally modified when switching tabs.
+- Cleanup and improve encoding support and order the encoding types.
 
 
 Other
 =====
-- Implement Gtk print support.
 - We need a cool Mousepad logo.
 - Write documentation.
+- Session manager support.
 
 
 Testing and polishing
